ziplinter/src/snapshots/ziplinter__test__time-22738.zip.snap
---
source: ziplinter/src/main.rs
expression: result
---
{
  "comment": "",
  "contents": [
    {
      "central": {
        "comment": "",
        "compressed_size": 0,
        "crc32": 0,
        "creator_version": {
          "host_system": "MsDos",
          "version": 20
        },
        "disk_nbr_start": 0,
        "external_attrs": 0,
        "extra": [
          85,
          84,
          5,
          0,
          1,
          128,
          67,
          109,
          56
        ],
        "flags": 8,
        "header_offset": 0,
        "internal_attrs": 0,
        "method": "Store",
        "mode": 438,
        "modified": "2000-01-01T00:00:00Z",
        "name": "file",
        "reader_version": {
          "host_system": "MsDos",
          "version": 20
        },
        "uncompressed_size": 0
      },
      "local": {
        "accessed": null,
        "compressed_size": 0,
        "crc32": 0,
        "created": null,
        "extra": [
          85,
          84,
          5,
          0,
          1,
          128,
          67,
          109,
          56
        ],
        "flags": 8,
        "gid": null,
        "header_offset": 0,
        "method": "Store",
        "method_specific": "None",
        "mode": 0,
        "modified": "2000-01-01T00:00:00Z",
        "name": "file",
        "reader_version": {
          "host_system": "MsDos",
          "version": 20
        },
        "uid": null,
        "uncompressed_size": 0
      }
    }
  ],
  "encoding": "Utf8",
  "eocd": {
    "dir": {
      "inner": {
        "dir_disk_nbr": 0,
        "dir_records_this_disk": 1,
        "directory_offset": 59,
        "directory_records": 1,
        "directory_size": 59,
        "disk_nbr": 0
      },
      "offset": 118
    },
    "dir64": null,
    "global_offset": 0
  },
  "parsed_ranges": [
    {
      "contains": "end of central directory record",
      "end": 140,
      "start": 118
    },
    {
      "contains": "central directory header",
      "end": 118,
      "filename": "file",
      "start": 59
    },
    {
      "contains": "local file header",
      "end": 43,
      "filename": "file",
      "start": 0
    },
    {
      "contains": "file data",
      "end": 43,
      "filename": "file",
      "start": 43
    },
    {
      "contains": "data descriptor",
      "end": 59,
      "filename": "file",
      "start": 43
    }
  ],
  "size": 140
}
