ziplinter/src/snapshots/ziplinter__test__time-go.zip.snap
---
source: ziplinter/src/main.rs
expression: result
---
{
  "comment": "",
  "contents": [
    {
      "central": {
        "comment": "",
        "compressed_size": 0,
        "crc32": 0,
        "creator_version": {
          "host_system": "MsDos",
          "version": 20
        },
        "disk_nbr_start": 0,
        "external_attrs": 0,
        "extra": [
          85,
          84,
          5,
          0,
          1,
          141,
          73,
          249,
          89
        ],
        "flags": 8,
        "header_offset": 0,
        "internal_attrs": 0,
        "method": "Store",
        "mode": 438,
        "modified": "2017-11-01T04:11:57Z",
        "name": "test.txt",
        "reader_version": {
          "host_system": "MsDos",
          "version": 20
        },
        "uncompressed_size": 0
      },
      "local": {
        "accessed": null,
        "compressed_size": 0,
        "crc32": 0,
        "created": null,
        "extra": [
          85,
          84,
          5,
          0,
          1,
          141,
          73,
          249,
          89
        ],
        "flags": 8,
        "gid": null,
        "header_offset": 0,
        "method": "Store",
        "method_specific": "None",
        "mode": 0,
        "modified": "2017-11-01T04:11:57Z",
        "name": "test.txt",
        "reader_version": {
          "host_system": "MsDos",
          "version": 20
        },
        "uid": null,
        "uncompressed_size": 0
      }
    }
  ],
  "encoding": "Utf8",
  "eocd": {
    "dir": {
      "inner": {
        "dir_disk_nbr": 0,
        "dir_records_this_disk": 1,
        "directory_offset": 63,
        "directory_records": 1,
        "directory_size": 63,
        "disk_nbr": 0
      },
      "offset": 126
    },
    "dir64": null,
    "global_offset": 0
  },
  "parsed_ranges": [
    {
      "contains": "end of central directory record",
      "end": 148,
      "start": 126
    },
    {
      "contains": "central directory header",
      "end": 126,
      "filename": "test.txt",
      "start": 63
    },
    {
      "contains": "local file header",
      "end": 47,
      "filename": "test.txt",
      "start": 0
    },
    {
      "contains": "file data",
      "end": 47,
      "filename": "test.txt",
      "start": 47
    },
    {
      "contains": "data descriptor",
      "end": 63,
      "filename": "test.txt",
      "start": 47
    }
  ],
  "size": 148
}
