ziplinter/src/snapshots/ziplinter__test__time-infozip.zip.snap
---
source: ziplinter/src/main.rs
expression: result
---
{
  "comment": "",
  "contents": [
    {
      "central": {
        "comment": "",
        "compressed_size": 0,
        "crc32": 0,
        "creator_version": {
          "host_system": "Unix",
          "version": 30
        },
        "disk_nbr_start": 0,
        "external_attrs": 2175008768,
        "extra": [
          85,
          84,
          5,
          0,
          3,
          141,
          73,
          249,
          89,
          117,
          120,
          11,
          0,
          1,
          4,
          232,
          3,
          0,
          0,
          4,
          232,
          3,
          0,
          0
        ],
        "flags": 0,
        "header_offset": 0,
        "internal_attrs": 0,
        "method": "Store",
        "mode": 420,
        "modified": "2017-11-01T04:11:57Z",
        "name": "test.txt",
        "reader_version": {
          "host_system": "MsDos",
          "version": 10
        },
        "uncompressed_size": 0
      },
      "local": {
        "accessed": null,
        "compressed_size": 0,
        "crc32": 0,
        "created": null,
        "extra": [
          85,
          84,
          9,
          0,
          3,
          141,
          73,
          249,
          89,
          141,
          73,
          249,
          89,
          117,
          120,
          11,
          0,
          1,
          4,
          232,
          3,
          0,
          0,
          4,
          232,
          3,
          0,
          0
        ],
        "flags": 0,
        "gid": 1000,
        "header_offset": 0,
        "method": "Store",
        "method_specific": "None",
        "mode": 0,
        "modified": "2017-11-01T04:11:57Z",
        "name": "test.txt",
        "reader_version": {
          "host_system": "MsDos",
          "version": 10
        },
        "uid": 1000,
        "uncompressed_size": 0
      }
    }
  ],
  "encoding": "Utf8",
  "eocd": {
    "dir": {
      "inner": {
        "comment": [],
        "dir_disk_nbr": 0,
        "dir_records_this_disk": 1,
        "directory_offset": 66,
        "directory_records": 1,
        "directory_size": 78,
        "disk_nbr": 0
      },
      "offset": 144
    },
    "dir64": null,
    "global_offset": 0
  },
  "parsed_ranges": [
    {
      "contains": "end of central directory record",
      "end": 166,
      "start": 144
    },
    {
      "contains": "central directory header",
      "end": 144,
      "filename": "test.txt",
      "start": 66
    },
    {
      "contains": "local file header",
      "end": 66,
      "filename": "test.txt",
      "start": 0
    },
    {
      "contains": "file data",
      "end": 66,
      "filename": "test.txt",
      "start": 66
    }
  ],
  "size": 166
}
