ziplinter/src/snapshots/ziplinter__test__time-win7.zip.snap
---
source: ziplinter/src/main.rs
expression: result
---
{
  "comment": "",
  "contents": [
    {
      "central": {
        "comment": "",
        "compressed_size": 0,
        "crc32": 0,
        "creator_version": {
          "host_system": "MsDos",
          "version": 20
        },
        "disk_nbr_start": 0,
        "external_attrs": 0,
        "extra": [],
        "flags": 0,
        "header_offset": 0,
        "internal_attrs": 0,
        "method": "Store",
        "mode": 438,
        "modified": "2017-10-31T21:11:58Z",
        "name": "test.txt",
        "reader_version": {
          "host_system": "MsDos",
          "version": 20
        },
        "uncompressed_size": 0
      },
      "local": {
        "accessed": null,
        "compressed_size": 0,
        "crc32": 0,
        "created": null,
        "extra": [],
        "flags": 0,
        "gid": null,
        "header_offset": 0,
        "method": "Store",
        "method_specific": "None",
        "mode": 0,
        "modified": "2017-10-31T21:11:58Z",
        "name": "test.txt",
        "reader_version": {
          "host_system": "MsDos",
          "version": 20
        },
        "uid": null,
        "uncompressed_size": 0
      }
    }
  ],
  "encoding": "Utf8",
  "eocd": {
    "dir": {
      "inner": {
        "comment": [],
        "dir_disk_nbr": 0,
        "dir_records_this_disk": 1,
        "directory_offset": 38,
        "directory_records": 1,
        "directory_size": 54,
        "disk_nbr": 0
      },
      "offset": 92
    },
    "dir64": null,
    "global_offset": 0
  },
  "parsed_ranges": [
    {
      "contains": "end of central directory record",
      "end": 114,
      "start": 92
    },
    {
      "contains": "central directory header",
      "end": 92,
      "filename": "test.txt",
      "start": 38
    },
    {
      "contains": "local file header",
      "end": 38,
      "filename": "test.txt",
      "start": 0
    },
    {
      "contains": "file data",
      "end": 38,
      "filename": "test.txt",
      "start": 38
    }
  ],
  "size": 114
}
