ziplinter/src/snapshots/ziplinter__test__time-winrar.zip.snap
---
source: ziplinter/src/main.rs
expression: result
---
{
  "comment": "",
  "contents": [
    {
      "central": {
        "comment": "",
        "compressed_size": 0,
        "crc32": 0,
        "creator_version": {
          "host_system": "MsDos",
          "version": 31
        },
        "disk_nbr_start": 0,
        "external_attrs": 128,
        "extra": [
          10,
          0,
          32,
          0,
          0,
          0,
          0,
          0,
          1,
          0,
          24,
          0,
          179,
          63,
          217,
          142,
          199,
          82,
          211,
          1,
          254,
          71,
          243,
          191,
          199,
          82,
          211,
          1,
          179,
          63,
          217,
          142,
          199,
          82,
          211,
          1
        ],
        "flags": 0,
        "header_offset": 0,
        "internal_attrs": 0,
        "method": "Store",
        "mode": 438,
        "modified": "2017-11-01T04:11:57.244817900Z",
        "name": "test.txt",
        "reader_version": {
          "host_system": "MsDos",
          "version": 10
        },
        "uncompressed_size": 0
      },
      "local": {
        "accessed": null,
        "compressed_size": 0,
        "crc32": 0,
        "created": null,
        "extra": [],
        "flags": 0,
        "gid": null,
        "header_offset": 0,
        "method": "Store",
        "method_specific": "None",
        "mode": 0,
        "modified": "2017-10-31T21:11:56Z",
        "name": "test.txt",
        "reader_version": {
          "host_system": "MsDos",
          "version": 10
        },
        "uid": null,
        "uncompressed_size": 0
      }
    }
  ],
  "encoding": "Utf8",
  "eocd": {
    "dir": {
      "inner": {
        "comment": [],
        "dir_disk_nbr": 0,
        "dir_records_this_disk": 1,
        "directory_offset": 38,
        "directory_records": 1,
        "directory_size": 90,
        "disk_nbr": 0
      },
      "offset": 128
    },
    "dir64": null,
    "global_offset": 0
  },
  "parsed_ranges": [
    {
      "contains": "end of central directory record",
      "end": 150,
      "start": 128
    },
    {
      "contains": "central directory header",
      "end": 128,
      "filename": "test.txt",
      "start": 38
    },
    {
      "contains": "local file header",
      "end": 38,
      "filename": "test.txt",
      "start": 0
    },
    {
      "contains": "file data",
      "end": 38,
      "filename": "test.txt",
      "start": 38
    }
  ],
  "size": 150
}
